Date	Added
12/27
        * Now I remember what I was smoking.. (SVN 819) [MouseJstr]
	* Fixed a bug in the guild_castle persistance code
	  in char_sql.  What was I smoking?  (SVN: 816) [MouseJstr]
        * Corrected a bad error in itemdb_read_itemslottable [celest]
        * Corrected wrong logging of text in int_guild.c, thanks to Alex14 [celest]
        * Summoned monsters will not give exp and items [celest]
        * Added the 6 new Yuno fields to maps_athena.conf [celest]
        * Added some Freya's optimisations in clif_parse [celest]
        * Added clif_update_mobhp - monsters' hp viewing now updates properly [celest]
        * Set alive_timer to -1 when quitting, not 0, or the map server might assume
          its still active [celest]
	* Changed the *_override_grffile to no by default, because many were having issues with it [Ajarn]

12/26
	* Fixed ANOTHER pet crash (double free) (SVN: 804) [MouseJstr]
        * Added a proper #define for MAX_VENDING (SVN: 802) [MouseJstr]
	* Fixed crash associated with vending more then 12 items
	  which walked on memory.. corrupting the pet data 	
	  structure (SVN: 801) [MouseJstr]
	* Fixed a crash that resulted when disconnecting (SVN 800)
	  the new client when the old client is still connected [MouseJstr]
	* Fixed some gcc 2.95 compile errors [MouseJstr]
	* Fixed some array bounds errors (SVN 799) [MouseJstr]
	* @mapexit (and do_final) now persist all data to the
	  char server before exiting to eliminate storage/inventory
	  inconsistancies.. [MouseJstr]  (SVN 793)
	* Some cleanup of spiritball memory management [MouseJstr] 
	* Dramatic performance work for exp updates to sql.  Previously, [MouseJstr]
	  when u killed a mob (in party share), it would cause the char_server to 

	  	1) Delete all guilds for all members of your party
	  	2) Re-create all guilds for all members of your party with the new exp
	     		values.

          Now it just generates 2 sql statements per party member,  
