@@ -46,22 +46,9 @@ Problem:	Wierd login-server bug on sql, it displays that the server is full when
 Assigned:	N/A
 Progress:	0%
 
-Problem:	Login-Txt is now crashing when you close it using ^C, Ctrl+C(on windows), it only does that if login was connected with char-server.
-Assigned:	MC Cameri
-Progress:	100%
-
 Problem:	MVP cast spells w/o showing "prepare cast line"
 Assigned:	N/A
 Progress:	0%
-
-Problem:	Item duping bug in storage...
-Assigned:	MouseJstr
-Progress:	100%
-	
-	Let's say you have 200 arrows and 100 Rosiotti arrow, you'll put 100 and 50 in storage
-	And you should end when you log back in with 100 of each on you and 100 and 50 in storage
-	Gain 50
-	Repeat
 
 Problem:	~40+ players connected.. and soon can't re-connect, they can enter password, but never see "select character" screen.
 Assigned:	N/A
@@ -72,27 +59,6 @@ Assigned:       N/A
 Progress:       0%
 
 	DB server Error - You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near 'n' Sniff')' at line 1    Scratch 'n' Sniff
-
-Problem:        Spiral Pierce can cause loss of Skill Points
-Assigned:       MouseJstr
-Progress:       100%
-
-    If you have a skill but due to a job change (or admin update), the
-    skill tree changes and you no longer can get to that skill, you
-    will loose the skill points if you log out/i
-
-    The easiest way to reproduce this problem is become a Peco Lord
-    Knight, get spiral pierce, get off the peco, log off, log in, and
-    get back on the peco.  You will not have Spiral Pierce anymore and
-    you will have lost the skill points
-
-Problem:	blacksmith hammerfall on the new_1-1.gat's bridge crashes server
-Assigned:       N/A
-Progress:       100% (fixed)
-
-Problem:	hunter spamming traps crashes server
-Assigned:       N/A
-Progress:       100% (fixed)
 
 Problem:	PETS can attack Guardians, so players go to enemy castles before WOE and KILL all their Guards with PETS... LoL!
 Assigned:       N/A
@@ -131,24 +97,9 @@ Progress:	-
 Notes:          It works differently now, you have to use it once to *allow* it to
                 activate, and once again to stop it from activating. ^^; [Celest]
 
-Problem:	When you change JOB, you don't lose skills in DB. It
-		means if you were Merchant once  
-		you can buy/sell with discount being Mage, etc.
-		Those skills aren't being shown in the skilltree, but
-		they do work. 
-                (fixed)
-
-Assigned:	MouseJstr
-Progress:	100%
-
 Problem:	Due to the Guilds CACHE we see some went-offline members as online ones. It is very confusing. You don't know who's really on.
 Assigned:	N/A
 Progress:	0%
-
-Problem:	When you have UNNAMED Arrows and Named Arrows in the storage and take some arrows then it change amount of other items.
-		It happens because server doesn't recognize Named and Unnamed Stockable items (Elemental Gems, Iron, Steel, Holy Water, Arrows)
-Assigned:	MouseJstr
-Progress:	100%
 
 Problem:	Guilds BUG (it isn't related to the scripts, because noone change them recently)
 		When some guild SEIZE any castle, then Castle N 1 becomes their own, too (not M 0, but M 1)
@@ -182,4 +133,3 @@ Progress:	0%
 	battle.c:3078:    Number of elements:   16
 	battle.c:3078:    Created at:           malloc.c, line 23
 	battle.c:3078:    Storage class:        heap
-		
